<resources>
    <string name="app_name">Movie App</string>
    <string name="registerMovie">Register Movie</string>
    <string name="displayMovies">Display Movies</string>
    <string name="favourites">Favourites</string>
    <string name="editMovies">Edit Movies</string>
    <string name="search">Search</string>
    <string name="ratings">Ratings</string>
    <string name="saveBtn">Save</string>
    <string name="movie_title">Movie Title</string>
    <string name="year_of_the_movie">Year Of the Movie</string>
    <string name="movie_director">Movie Director</string>
    <string name="list_of_actors_actresses">List of Actors/Actresses</string>
    <string name="movie_rating">Movie Rating</string>
    <string name="movie_review">Movie Review</string>
    <string name="movieDetails">Register a Movie</string>
    <string name="addToFav">Add To Favourites</string>
    <string name="SaveBtn">Save</string>
    <string name="favMovList">Favourite Movie List</string>
    <string name="pageHead">Movie Information</string>
    <string name="rating">Rating:</string>
    <string name="updateBtn">Update</string>
    <string name="movieName" />
    <string name="movieYearr" />
    <string name="movieDir" />
    <string name="actList" />
    <string name="movieReview" />
    <string name="favMov" />
    <string name="result">Search Result:</string>
    <string name="searchInfo">Search Movie Information</string>
    <string name="searchBt">Search</string>
    <string name="searchBar" />
    <string name="searchResult" />
    <string name="movieDirec" />
    <string name="movAct" />
    <string name="find_movie_in_imdb">Find movie in IMDB</string>
    <string name="heading">Image of the Movie</string>
    <string name="movieimage" />
    <string name="title">Movie Title</string>
    <string name="year">Movie Year</string>
    <string name="directors">Director</string>
    <string name="actors">Actors</string>
    <string name="review">Review</string>
    <string name="favostatus">Favourite Movie</string>
    <string name="favStatusHint">Enter YES or NO Only!</string>
    <string name="movieHint">Enter a Movie Year Produced after 1895!</string>
    <string name="option">Select An Option</string>
</resources>